2005-08-05  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-lgpl/hildon-find-toolbar.c: changed icons and add the
	space between label and combobox entry.

2005-08-03  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-lgpl.pc.in (Libs): Removed old -lXtst dependency

	* hildon-lgpl/hildon-app.c (hildon_app_event_filter): Appmenu
	click checking shouldn't be done when we're in fullscreen mode,
	since there is no appmenu then.

2005-08-01  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-caption.c: check if the child is container which contains
	focusable widget
	
	* hildon-find-toolbar.[ch] (hildon_find_toolbar_highlight_entry):
	new function to highlight text entry and let it grab focus
	depending on passed value.
	
	* configure.ac: Adjusted CFLAGS and removed -Werror due to the
	glib-2.0 flaw. See
	http://bugzilla.gnome.org/show_bug.cgi?id=310175 and
	http://bugzilla.gnome.org/show_bug.cgi?id=310216

	* hildon-lgpl/hildon-app.c: handle 'menu' hardkey (fix), do not
	react to long press.

	* hildon-lgpl/gtk-infoprint.c: fixed a crash in
	GtkInfoprint. gtk_banner_close attempted to destroy a banner which
	was actually already destroyed automatically when its transient
	parent was destroyed

	* hildon-lgpl/hildon-defines.h: Fixed problem where
	HILDON_ICON_SIZE_INDI_WLAN_STRENGTH was set too small

	* Fixed dimming paste option when copied text cannot / should not
	be pasted

	* hildon-app.c: Disallowed copying / cutting text from non-visible
	widgets Removed forced geometry constraints

	* hildon-defines.[ch]: Icon size definition fixes

	* Fixed critical GTK+ error in open file dialog

	* Fixed drag and drop not working correctly

	* gtk-infoprint.c: replace gtk_if_fail with code which doesn't
	spam the console with Gtk-CRITICAL messages
